--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" href="./style.css">
+    
     <title>iSA</title>
 </head>
 <body>
+    <div>
+        <span>
+            Warsztat liniowy w blokowym!
+        </span>
+    </div>
     <span>
         Warsztaty!
     </span>
-    <span>
-        Warsztaty!
-    </span>
-    <p>
+    <p class="red">
+        Warsztat blokowy!
+    </p>
+    <p class="green">
         Warsztat blokowy!
     </p>
 </body>
