--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
     <title>iSA</title>
 </head>
 <body>
-    <div>
-        <span>
-            Warsztat liniowy w blokowym!
-        </span>
+   
+<div id="about">
+    <div class="img-div">
+        <img src="./img/html5.png" alt="HTML">
     </div>
-    <span>
-        Warsztaty!
-    </span>
-    <p class="red">
-        Warsztat blokowy!
-    </p>
-    <p class="green">
-        Warsztat blokowy!
-    </p>
+    <div class="img-div">
+        <img src="./img/css3.png" alt="CSS">
+    </div>
+    <div class="img-div">
+        <img src="./img/bootstrap.png" alt="Bootstrap">
+    </div>
+</div>
+
 </body>
 </html>
