Some margins and padding added

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <div id="about">
     <div class="container">
         <div class="row">
-            <div class="img-div col-xs-12 col-md-4">
+            <div class="img-div col-xs-12 col-sm-4">
                 <img src="./img/html5.png" alt="HTML">
             </div>
-            <div class="img-div col-xs-12 col-md-4">
+            <div class="img-div col-xs-12 col-sm-4">
                 <img src="./img/css3.png" alt="CSS">
             </div>
-            <div class="img-div col-xs-12 col-md-4">
+            <div class="img-div col-xs-12 col-sm-4">
                 <img src="./img/bootstrap.png" alt="Bootstrap">
             </div>
         </div>
