Grid with text and photos

--- a/index.html
+++ b/index.html
@@ -32,5 +32,28 @@
     </div>
 </div>
 
+<div id="texts">
+    <div class="container">
+        <div class="row">
+            <div class="picture col-xs-12 col-sm-6"></div>
+            <div class="col-xs-12 col-sm-6">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem tempora vero nesciunt explicabo voluptas fugit est, ut molestias commodi voluptates modi rerum in vitae ullam quae nostrum nisi, repudiandae magni?
+            </div>
+        </div>
+        <div class="row">
+            <div class="picture col-xs-12 col-sm-6 pull-right"></div>
+            <div class="col-xs-12 col-sm-6">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem tempora vero nesciunt explicabo voluptas fugit est, ut molestias commodi voluptates modi rerum in vitae ullam quae nostrum nisi, repudiandae magni?
+            </div>
+        </div>
+        <div class="row">
+            <div class="picture col-xs-12 col-sm-6"></div>
+            <div class="col-xs-12 col-sm-6">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem tempora vero nesciunt explicabo voluptas fugit est, ut molestias commodi voluptates modi rerum in vitae ullam quae nostrum nisi, repudiandae magni?
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
