Contact form added

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 <body>
    
-<div id="hero">
-    
-</div>
+<div id="hero"></div>
 
 <div id="about">
     <div class="container">
@@ -52,6 +50,26 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem tempora vero nesciunt explicabo voluptas fugit est, ut molestias commodi voluptates modi rerum in vitae ullam quae nostrum nisi, repudiandae magni?
             </div>
         </div>
+    </div>
+</div>
+
+<div id="contact">
+    <div class="container">
+        <form action="https://formspree.io/mateusz.choma@infoshareacademy.com" method="POST">
+            <div class="form-group">
+                <input class="form-control" type="text" placeholder="Imię i nazwisko" />
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" placeholder="E-mail" />
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" rows="10">
+                </textarea>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="submit" value="Wyślij!"/>
+             </div>
+        </form>
     </div>
 </div>
 
